# rust-sdk

./: .env.example  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  Makefile  README.md  TEST.md  index.html  rustfmt.toml
api-examples/: Cargo.toml  Makefile
api-examples/examples/: copy_object.rs  create_bucket.rs  delete_object.rs  form_upload_object.rs  get_bucket_taggings.rs  get_buckets.rs  get_domains.rs  get_objects.rs  list_regions.rs  modify_object_metadata.rs  modify_object_status.rs  move_object.rs  restore_archived_object.rs  set_object_type.rs  stat_object.rs  stat_objects.rs  unfreeze_object.rs
api-generator/: Cargo.toml  Makefile
api-generator/src/: base_types.rs  base_utils.rs  client.rs  description.rs  enums.rs  form.rs  header.rs  json.rs  main.rs  mods.rs  multipart.rs  path.rs  query.rs  traits.rs
apis/: Cargo.toml  Makefile  README.md
apis/src/: base_types.rs  base_utils.rs  lib.rs
apis/src/regions/: mod.rs  provider.rs
apis/src/storage/: async_fetch_object.rs  batch_ops.rs  copy_object.rs  create_bucket.rs  delete_bucket.rs  delete_bucket_taggings.rs  delete_object.rs  fetch_object.rs  get_async_fetch_task.rs  get_bucket_taggings.rs  get_buckets.rs  get_domains.rs  get_objects.rs  get_objects_v2.rs  mod.rs  modify_object_life_cycle.rs  modify_object_metadata.rs  modify_object_status.rs  move_object.rs  prefetch_object.rs  put_object.rs  restore_archived_object.rs  resumable_upload_v1_bput.rs  resumable_upload_v1_make_block.rs  resumable_upload_v1_make_file.rs  resumable_upload_v2_abort_multipart_upload.rs  resumable_upload_v2_complete_multipart_upload.rs  set_bucket_private.rs  (+8 more)
credential/: Cargo.toml  Makefile  README.md
credential/src/: header_name.rs  key.rs  lib.rs
curl/: Cargo.toml  Makefile
curl/src/: lib.rs
download-manager/: Cargo.toml  Makefile  README.md
download-manager/src/: download_callbacks.rs  download_manager.rs  downloading_object.rs  lib.rs
etag/: Cargo.toml  Makefile  README.md
etag/src/: async_etag.rs  etag.rs  etag_v1.rs  etag_v2.rs  lib.rs  sha1.rs
http/: Cargo.toml  Makefile  README.md  build.rs
http-client/: Cargo.toml  Makefile  README.md
http-client/src/: cache.rs  lib.rs  spawn.rs
http-isahc/: Cargo.toml  Makefile  README.md
http-isahc/src/: builder.rs  client.rs  extensions.rs  lib.rs
http-reqwest/: Cargo.toml  Makefile  README.md
http-reqwest/src/: async_client.rs  builder.rs  extensions.rs  lib.rs  sync_client.rs
http-ureq/: Cargo.toml  Makefile  README.md
http-ureq/src/: client.rs  lib.rs
http/src/: authorization.rs  body.rs  callback.rs  error.rs  lib.rs  request.rs  response.rs
objects-manager/: Cargo.toml  Makefile  README.md
objects-manager/src/: batch_operations.rs  bucket.rs  callbacks.rs  lib.rs  list.rs  objects_manager.rs  operation.rs
qiniu-c/: 1.c  Cargo.toml  DESIGN.md  Doxyfile  Makefile  Makefile.forWindows  README.md  USAGE.md  build.rs  cbindgen.toml
qiniu-c-translator/: Cargo.toml  DESIGN.md  Makefile  README.md
qiniu-c-translator/src/: ast.rs  classifier.rs  dump_entity.rs  main.rs  ruby.rs  utils.rs
qiniu-c/src/: batch_uploader.rs  bucket.rs  bucket_manager.rs  bucket_uploader.rs  client.rs  config.rs  credential.rs  etag.rs  http.rs  lib.rs  object.rs  region.rs  result.rs  storage.rs  string.rs  thread_pool.rs  upload.rs  upload_manager.rs  upload_response.rs  upload_token.rs  utils.rs  version.rs
qiniu-c/test/: dotenv.c  main.c  test.h  test_batch_upload.c  test_bucket.c  test_bucket_manager.c  test_config.c  test_credential.c  test_etag.c  test_object.c  test_qiniu.c  test_region.c  test_storage.c  test_upload.c  test_upload_manager.c  test_upload_token.c  test_utils.c  utils.c
qiniu-ffi/: Cargo.toml  Doxyfile  Makefile  cbindgen.toml
qiniu-ffi/ffi-struct-macros/: Cargo.toml
qiniu-ffi/src/: credential.rs  credential_provider.rs  error.rs  etag.rs  lib.rs  qiniu_reader.rs  qiniu_str.rs  ucstring.rs
qiniu-ffi/test/: dotenv.c  main.c  test.h  test_credential.c  test_credential_provider.c  test_etag.c  test_http.c  test_str.c
qiniu-rust/: Cargo.toml  DESIGN.md  Makefile  README.md
qiniu-rust-http/: Cargo.toml  Makefile  README.md
qiniu-rust-http/src/: error.rs  header.rs  lib.rs  method.rs  request.rs  response.rs
qiniu-rust-test/: Cargo.toml  Makefile  README.md
qiniu-rust-test-utils/: Cargo.toml  Makefile  README.md
qiniu-rust-test-utils/src/: env.rs  http_call_mock.rs  lib.rs  temp_file.rs
qiniu-rust-test/src/: handler.rs  lib.rs  storage.rs  uploader.rs
qiniu-rust-with-libcurl/: Cargo.toml  Makefile  README.md
qiniu-rust-with-libcurl/src/: lib.rs
qiniu-rust-with-reqwest/: Cargo.toml  Makefile
qiniu-rust-with-reqwest-test/: Cargo.toml
qiniu-rust-with-reqwest-test/src/: lib.rs
qiniu-rust-with-reqwest/src/: lib.rs
qiniu-rust/credential/: Cargo.toml
qiniu-rust/etag/: Cargo.toml
qiniu-rust/examples/: verbose_http_call.rs
qiniu-rust/http/: Cargo.toml
qiniu-rust/src/: client.rs  config.rs  credential.rs  lib.rs
qiniu-rust/upload_token/: Cargo.toml
qiniu-rust/utils/: Cargo.toml
sdk/: Cargo.toml  Makefile  README.md
sdk-examples/: Cargo.toml
sdk-examples/examples/: auto_upload_object.rs  copy_object.rs  create_bucket.rs  delete_object.rs  form_upload_object.rs  get_buckets.rs  get_objects.rs  list_regions.rs  modify_object_metadata.rs  modify_object_status.rs  move_object.rs  restore_archived_object.rs  stat_object.rs  stat_objects.rs
sdk/src/: lib.rs
upload-manager/: Cargo.toml  Makefile  README.md
upload-manager/examples/: upload.rs
upload-manager/src/: auto_uploader.rs  callbacks.rs  lib.rs  object_params.rs  upload_manager.rs  upload_token.rs
upload-token/: Cargo.toml  Makefile  README.md
upload-token/examples/: generate.rs
upload-token/src/: file_type.rs  lib.rs  upload_policy.rs  upload_token.rs
upload_token/: Cargo.toml  Makefile
upload_token/examples/: generate.rs
upload_token/scripts/: generate.rs
upload_token/src/: file_type.rs  lib.rs  upload_policy.rs  upload_token.rs
utils-macros/: Cargo.toml  Makefile
utils-macros/src/: lib.rs
(+377 files in other folders)
