[workspace]

members = [
    "credential",
    "utils",
    "etag",
    "upload-token",
    "http",
    "http-reqwest",
    "http-isahc",
    "http-ureq",
    "http-client",
    "api-generator",
    "apis",
    "api-examples",
    "objects-manager",
    "upload-manager",
    "download-manager",
    "sdk",
]

[profile.release]
lto = "fat"
codegen-units = 1
