[workspace]
members = [
    "credential",
    "utils",
    "etag",
    "upload-token",
    "http",
    "http-reqwest",
    "http-isahc",
    "http-ureq",
    "http-client",
    "api-generator",
    "apis",
    "objects-manager",
    "upload-manager",
    "download-manager",
    "sdk",
    "sdk-examples",
]
resolver = "2"

[profile.release]
lto = "fat"
codegen-units = 1
