[package]
name = "qiniu-api-generator"
version = "0.2.2"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2021"
rust-version = "1.60.0"
license = "MIT"
repository = "https://github.com/qiniu/rust-sdk.git"
homepage = "https://www.qiniu.com"
description = "Qiniu API Generator for Rust"
keywords = ["qiniu", "storage"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
convert_case = "0.4.0"
env_logger = "0.9.0"
log = "0.4.14"
proc-macro2 = "1.0.30"
quote = "1.0.10"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.21"
smart-default = "0.6.0"
tempfile = "3.2.0"
trybuild = "1.0.50"
walkdir = "2.3.2"

[dev-dependencies]
serde_json = "1.0.68"
qiniu-http = { version = "0.2.2", path = "../http" }
qiniu-http-client = { version = "0.2.2", path = "../http-client" }
qiniu-upload-token = { version = "0.2.2", path = "../upload-token" }
qiniu-utils = { version = "0.2.2", path = "../utils" }
indexmap = "1.7.0"
