[package]
name = "qiniu-apis"
version = "0.1.2"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2021"
rust-version = "1.60.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/qiniu/rust-sdk.git"
homepage = "https://www.qiniu.com"
description = "Qiniu HTTP APIs for Rust"
keywords = ["qiniu", "storage"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mime = "0.3.16"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
indexmap = "1.7.0"
futures = { version = "0.3.5", optional = true }
async-std = { version = "1.9.0", optional = true }

qiniu-http-client = { version = "0.1.2", path = "../http-client", default-features = false }
qiniu-utils = { version = "0.1.2", path = "../utils" }

[dev-dependencies]
anyhow = "1.0.43"

[features]
default = ["ureq"]
async = ["futures", "async-std", "qiniu-http-client/async"]
reqwest = ["qiniu-http-client/reqwest"]
isahc = ["qiniu-http-client/isahc"]
ureq = ["qiniu-http-client/ureq"]
c_ares = ["qiniu-http-client/c_ares"]
trust_dns = ["qiniu-http-client/trust_dns"]
tokio1 = ["qiniu-http-client/tokio1"]
tokio02 = ["qiniu-http-client/tokio02"]
tokio03 = ["qiniu-http-client/tokio03"]
dns-over-https = ["qiniu-http-client/dns-over-https"]
dns-over-https-rustls = ["qiniu-http-client/dns-over-https-rustls"]
dns-over-tls = ["qiniu-http-client/dns-over-tls"]
dns-over-rustls = ["qiniu-http-client/dns-over-rustls"]
dns-over-native-tls = ["qiniu-http-client/dns-over-native-tls"]
dnssec-openssl = ["qiniu-http-client/dnssec-openssl"]
dnssec-ring = ["qiniu-http-client/dnssec-ring"]
dnssec = ["qiniu-http-client/dnssec"]
docs = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "feature=\"docs\""]
