[package]
name = "qiniu-apis"
version = "0.3.0"
authors = [
    "Rong Zhou <zhourong@qiniu.com>",
    "Shanghai Qiniu Information Technologies Co., Ltd.",
]
edition = "2021"
rust-version = "1.70.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/qiniu/rust-sdk.git"
homepage = "https://www.qiniu.com"
description = "Qiniu HTTP APIs for Rust"
keywords = ["qiniu", "storage"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
mime = "0.3.17"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
indexmap = "2.0.0"
futures = { version = "0.3.28", optional = true }

qiniu-http-client = { version = "0.3.0", path = "../http-client", default-features = false }
qiniu-utils = { version = "0.3.0", path = "../utils" }

[features]
default = ["ureq"]
async-std-runtime = [
    "futures",
    "qiniu-utils/async-std-runtime",
    "qiniu-http-client/async-std-runtime",
]
tokio-runtime = [
    "futures",
    "qiniu-utils/tokio-runtime",
    "qiniu-http-client/tokio-runtime",
]
reqwest = ["qiniu-http-client/reqwest"]
isahc = ["qiniu-http-client/isahc"]
ureq = ["qiniu-http-client/ureq"]
c_ares = ["qiniu-http-client/c_ares"]
trust_dns = ["qiniu-http-client/trust_dns"]
async-std-runtime-tokio1 = [
    "async-std-runtime",
    "qiniu-http-client/async-std-runtime-tokio1",
]
async-std-runtime-tokio02 = [
    "async-std-runtime",
    "qiniu-http-client/async-std-runtime-tokio02",
]
async-std-runtime-tokio03 = [
    "async-std-runtime",
    "qiniu-http-client/async-std-runtime-tokio03",
]
dns-over-https = ["qiniu-http-client/dns-over-https"]
dns-over-https-rustls = ["qiniu-http-client/dns-over-https-rustls"]
dns-over-tls = ["qiniu-http-client/dns-over-tls"]
dns-over-rustls = ["qiniu-http-client/dns-over-rustls"]
dns-over-native-tls = ["qiniu-http-client/dns-over-native-tls"]
dnssec-openssl = ["qiniu-http-client/dnssec-openssl"]
dnssec-ring = ["qiniu-http-client/dnssec-ring"]
dnssec = ["qiniu-http-client/dnssec"]
docs = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "feature=\"docs\""]
