[package]
name = "qiniu-credential"
version = "0.0.4"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.qiniu.com"
description = "Qiniu Credential SDK for Rust"
keywords = ["qiniu", "storage"]

[dependencies]
hmac = "0.11.0"
sha-1 = "0.9.6"
once_cell = "1.8.0"
http = "0.2.4"
mime = "0.3.16"
form_urlencoded = "1.0.1"
serde = "1.0.130"

qiniu-utils = { version = "0.0.4", path = "../utils" }

[dev-dependencies]
anyhow = "1.0.44"
async-std = { version = "1.9.0", features = ["attributes"] }
serde_json = "1.0.68"

[features]
default = []
async = []
docs = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "feature=\"docs\""]
