[package]
name = "qiniu-credential"
version = "0.1.4"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2021"
rust-version = "1.60.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/qiniu/rust-sdk.git"
homepage = "https://www.qiniu.com"
description = "Qiniu Credential SDK for Rust"
keywords = ["qiniu", "storage"]

[dependencies]
hmac = { version = "0.11.0", features = ["std"] }
sha-1 = "0.9.6"
once_cell = "1.8.0"
http = "0.2.4"
mime = "0.3.16"
form_urlencoded = "1.0.1"
serde = "1.0.130"
dyn-clonable = "0.9.0"
assert-impl = "0.1.3"
auto_impl = "1.0.0"
futures-lite = { version = "1.12.0", optional = true }

qiniu-utils = { version = "0.1.4", path = "../utils" }

[dev-dependencies]
anyhow = "1.0.44"
async-std = { version = "1.9.0", features = ["attributes"] }
serde_json = "1.0.68"

[features]
default = []
async = ["futures-lite"]
docs = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "feature=\"docs\""]
