[package]
name = "qiniu-credential"
version = "0.3.0"
authors = [
    "Rong Zhou <zhourong@qiniu.com>",
    "Shanghai Qiniu Information Technologies Co., Ltd.",
]
edition = "2021"
rust-version = "1.70.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/qiniu/rust-sdk.git"
homepage = "https://www.qiniu.com"
description = "Qiniu Credential SDK for Rust"
keywords = ["qiniu", "storage"]

[dependencies]
hmac = { version = "0.12.1", features = ["std"] }
sha-1 = "0.10.1"
once_cell = "1.18.0"
http = "0.2.9"
mime = "0.3.17"
form_urlencoded = "1.2.0"
serde = "1.0.185"
dyn-clonable = "0.9.0"
assert-impl = "0.1.3"
auto_impl = "1.1.0"
futures-lite = { version = "1.13.0", optional = true }

qiniu-utils = { version = "0.3.0", path = "../utils" }

[dev-dependencies]
anyhow = "1.0.75"
serde_json = "1.0.105"
async-std = { version = "1.12.0", features = ["attributes"] }

qiniu-utils = { version = "0.3.0", path = "../utils", features = ["macros"] }

[features]
default = []
async-std-runtime = ["futures-lite", "qiniu-utils/async-std-runtime"]
tokio-runtime = ["futures-lite", "qiniu-utils/tokio-runtime"]
docs = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "feature=\"docs\""]
