[package]
name = "qiniu-curl"
version = "0.0.4"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.qiniu.com"
description = "Qiniu Curl based HTTP Interface Implementation for Rust"
keywords = ["qiniu", "storage"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.4.1"
curl = { version = "0.4.33", optional = true }
curl-sys = { version = "0.4.36", optional = true }
tempfile = "3.1.0"
object-pool = "0.5.3"
url = "2.1.0"
futures = { version = "0.3.5", optional = true }
crossbeam-channel = { version = "0.4.3", optional = true }
crossbeam-utils = { version = "0.7.2", optional = true }
slab = { version = "0.4.2", optional = true }
thiserror = { version = "1.0", optional = true }
sluice = { version = "0.5.2", optional = true }

qiniu-http = { version = "0.0.4", path = "../http", optional = true }

[dev-dependencies]
futures = "0.3.5"
warp = "0.2.5"
tokio = { version = "0.2.22", features = ["rt-core", "macros", "blocking"] }
anyhow = "1.0"
rand = "0.7.3"

[features]
default = ["http2", "curl-ssl", "qiniu-http"]
static = ["static-curl", "static-ssl"]
http2 = ["curl/http2"]
static-curl = ["curl/static-curl"]
static-ssl = ["curl/static-ssl"]
curl-ssl = ["curl/ssl"]
curl-mesalink = ["curl/mesalink"]
curl-spnego = ["curl/spnego"]
async = ["qiniu-http/async", "curl-sys", "futures", "slab", "thiserror", "crossbeam-channel", "crossbeam-utils", "sluice"]
docs = []

[package.metadata.docs.rs]
features = ["docs", "async"]
rustdoc-args = ["--cfg", "feature=\"docs\""]
