[package]
name = "qiniu-download-manager"
version = "0.3.0"
authors = [
    "Rong Zhou <zhourong@qiniu.com>",
    "Shanghai Qiniu Information Technologies Co., Ltd.",
]
edition = "2021"
rust-version = "1.70.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/qiniu/rust-sdk.git"
homepage = "https://www.qiniu.com"
description = "Qiniu Download Manager for Rust"
keywords = ["qiniu", "storage"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
http = "0.2.9"
anyhow = "1.0.75"
thiserror = "1.0.47"
assert-impl = "0.1.3"
url-escape = "0.1.1"
auto_impl = "1.1.0"
dyn-clonable = "0.9.0"
futures = { version = "0.3.28", optional = true }

qiniu-apis = { version = "0.3.0", path = "../apis", default-features = false }
qiniu-utils = { version = "0.3.0", path = "../utils", optional = true }

[dev-dependencies]
rand = "0.8.5"
env_logger = "0.10.0"
qiniu-utils = { version = "0.3.0", path = "../utils", features = ["macros"] }
sha-1 = "0.10.1"

[features]
default = ["ureq"]
async-std-runtime = [
    "futures",
    "qiniu-apis/async-std-runtime",
    "qiniu-utils/async-std-runtime",
]
tokio-runtime = [
    "futures",
    "qiniu-apis/tokio-runtime",
    "qiniu-utils/tokio-runtime",
]
reqwest = ["qiniu-apis/reqwest"]
isahc = ["qiniu-apis/isahc"]
ureq = ["qiniu-apis/ureq"]
c_ares = ["qiniu-apis/c_ares"]
trust_dns = ["qiniu-apis/trust_dns"]
async-std-runtime-tokio1 = [
    "async-std-runtime",
    "qiniu-apis/async-std-runtime-tokio1",
]
async-std-runtime-tokio02 = [
    "async-std-runtime",
    "qiniu-apis/async-std-runtime-tokio02",
]
async-std-runtime-tokio03 = [
    "async-std-runtime",
    "qiniu-apis/async-std-runtime-tokio03",
]
dns-over-https = ["qiniu-apis/dns-over-https"]
dns-over-https-rustls = ["qiniu-apis/dns-over-https-rustls"]
dns-over-tls = ["qiniu-apis/dns-over-tls"]
dns-over-rustls = ["qiniu-apis/dns-over-rustls"]
dns-over-native-tls = ["qiniu-apis/dns-over-native-tls"]
dnssec-openssl = ["qiniu-apis/dnssec-openssl"]
dnssec-ring = ["qiniu-apis/dnssec-ring"]
dnssec = ["qiniu-apis/dnssec"]
docs = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "feature=\"docs\""]
