[package]
name = "qiniu-etag"
version = "0.0.4"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2021"
rust-version = "1.56.0"
license = "Apache-2.0"
homepage = "https://www.qiniu.com"
description = "Qiniu Etag calculation SDK for Rust"
keywords = ["qiniu", "storage"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha-1 = "0.9.6"
digest = "0.9.0"
futures-lite = { version = "1.12.0", optional = true }

qiniu-utils = { version = "0.0.4", path = "../utils" }

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }

[features]
default = []
async = ["futures-lite"]
docs = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "feature=\"docs\""]
