[package]
name = "qiniu-etag"
version = "0.2.2"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2021"
rust-version = "1.60.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/qiniu/rust-sdk.git"
homepage = "https://www.qiniu.com"
description = "Qiniu Etag calculation SDK for Rust"
keywords = ["qiniu", "storage"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha-1 = "0.9.6"
digest = "0.9.0"
assert-impl = "0.1.3"
futures-lite = { version = "1.12.0", optional = true }

qiniu-utils = { version = "0.2.2", path = "../utils" }

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }

[features]
default = []
async = ["futures-lite"]
docs = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "feature=\"docs\""]
