[package]
name = "qiniu-http-client"
version = "0.0.4"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2021"
rust-version = "1.56.0"
license = "Apache-2.0"
homepage = "https://www.qiniu.com"
description = "Qiniu HTTP Client for Rust"
keywords = ["qiniu", "storage"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.20"
dashmap = "3.11.10"
serde = { version ="1.0.117", features = ["derive", "rc"] }
serde_json = "1.0.59"
dirs = "3.0.1"
dns-lookup = "1.0.4"
mime = "0.3.16"
log = "0.4.11"
rand = "0.7.3"
form_urlencoded = "1.0.1"
url = "2.2.2"
ipnet = "2.3.1"
anyhow = "1.0.43"
fs2 = "0.4.3"
crossbeam-channel = "0.5.1"
crossbeam-queue = "0.3.2"
bytes = "1.1.0"
percent-encoding = "2.1.0"
regex = "1.5.4"
lazy_static = "1.4.0"
mime_guess = "2.0.3"
cfg-if = "1.0.0"
once_cell = "1.8.0"
tap = "1.0.1"
num-rational = { version = "0.3.0", default-features = false }
c-ares = { version ="7.2.0", optional = true }
c-ares-resolver = { version ="7.1.3", optional = true }
futures = { version = "0.3.5", optional = true }
futures-timer = { version = "3.0.2", optional = true }
async-std = { version = "1.9.0", optional = true }
trust-dns-resolver = { version = "0.20.3", optional = true }
async-std-resolver = { version = "0.20.3", optional = true }

qiniu-http = { version = "0.0.4", path = "../http" }
qiniu-credential = { version = "0.0.4", path = "../credential" }
qiniu-upload-token = { version = "0.0.4", path = "../upload_token" }
qiniu-reqwest = { version = "0.0.4", path = "../http-reqwest", optional = true }
qiniu-isahc = { version = "0.0.4", path = "../http-isahc", optional = true }
qiniu-ureq = { version = "0.0.4", path = "../http-ureq", optional = true }
qiniu-utils = { version = "0.0.4", path = "../utils" }

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
tokio = { version = "1", features = ["full"] }
tap = "1.0.0"
tempfile = "3.1.0"
warp = "0.3.1"
futures = "0.3.5"
env_logger = "0.9.0"
once_cell = "1.8.0"

[features]
default = ["ureq"]
c_ares = ["c-ares", "c-ares-resolver"]
trust_dns = ["trust-dns-resolver", "async-std-resolver"]
reqwest = ["qiniu-reqwest"]
isahc = ["qiniu-isahc"]
ureq = ["qiniu-ureq"]
async = ["async-std", "futures", "futures-timer", "qiniu-http/async", "qiniu-credential/async", "qiniu-upload-token/async", "qiniu-reqwest/async", "qiniu-isahc/async", "qiniu-ureq/async"]
tokio1 = ["async", "async-std/tokio1"]
tokio02 = ["async", "async-std/tokio02"]
tokio03 = ["async", "async-std/tokio03"]
docs = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "feature=\"docs\""]
