[package]
name = "qiniu-isahc"
version = "0.3.0"
authors = [
    "Rong Zhou <zhourong@qiniu.com>",
    "Shanghai Qiniu Information Technologies Co., Ltd.",
]
edition = "2021"
rust-version = "1.70.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/qiniu/rust-sdk.git"
homepage = "https://www.qiniu.com"
description = "Qiniu Isahc based HTTP Interface Implementation for Rust"
keywords = ["qiniu", "storage"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
isahc = { version = "1.7.2", default-features = false }
futures = { version = "0.3.28", optional = true }

qiniu-http = { version = "0.3.0", path = "../http" }

[features]
async-std-runtime = ["futures", "qiniu-http/async-std-runtime"]
tokio-runtime = ["futures", "qiniu-http/tokio-runtime"]
http2 = ["isahc/http2"]
psl = ["isahc/psl"]
spnego = ["isahc/spnego"]
static-curl = ["isahc/static-curl"]
static-ssl = ["isahc/static-ssl"]
text-decoding = ["isahc/text-decoding"]
docs = []

[dev-dependencies]
bytes = "1.4.0"
env_logger = "0.10.0"
md-5 = "0.10.5"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
warp = "0.3.5"
futures = "0.3.28"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "feature=\"docs\""]
