[package]
name = "qiniu-reqwest"
version = "0.2.3"
authors = [
    "Rong Zhou <zhourong@qiniu.com>",
    "Shanghai Qiniu Information Technologies Co., Ltd.",
]
edition = "2021"
rust-version = "1.70.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/qiniu/rust-sdk.git"
homepage = "https://www.qiniu.com"
description = "Qiniu Reqwest based HTTP Interface Implementation for Rust"
keywords = ["qiniu", "storage"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
reqwest = { version = "0.11.19", features = [
    "blocking",
    "stream",
], default-features = false }
qiniu-http = { version = "0.2.3", path = "../http" }
bytes = { version = "1.4.0", optional = true }
futures = { version = "0.3.28", optional = true }

[features]
default = ["gzip", "brotli", "deflate", "default-tls"]
async = ["qiniu-http/async", "futures", "bytes"]
gzip = ["reqwest/gzip"]
brotli = ["reqwest/brotli"]
deflate = ["reqwest/deflate"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
trust-dns = ["reqwest/trust-dns"]
docs = []

[dev-dependencies]
bytes = "1.4.0"
env_logger = "0.10.0"
md-5 = "0.10.5"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
warp = "0.3.5"
futures = "0.3.28"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "feature=\"docs\""]
